# aho-sudoku

./: Makefile  README.md  meson.build
data/: com.github.aharotias2.aho-sudoku.desktop
flatpak/: com.github.aharotias2.aho-sudoku.yml
src/: sudoku.vala
